--- a/package.json
+++ b/package.json
@@ -40,5 +40,25 @@
     "ts-node": "^10.8.1",
     "typechain": "^5.2.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "ethers": "^5.6.8",
+    "@ethersproject/abstract-signer": "^5.6.2",
+    "@ethersproject/constants": "^5.6.1",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
+    "@openzeppelin/contracts": "^4.2.0",
+    "@typechain/hardhat": "^2.3.0",
+    "@types/mocha": "^9.0.0",
+    "eth-gas-reporter": "^0.2.24",
+    "ethereumjs-util": "^7.1.0",
+    "ethereumjs-wallet": "^1.0.1",
+    "ganache": "^7.1.0",
+    "hardhat": "^2.9.5",
+    "hardhat-deploy": "^0.9.3",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
+    "hardhat-gas-reporter": "^1.0.7",
+    "solidity-coverage": "^0.7.18",
+    "source-map-support": "^0.5.19",
+    "typescript": "^4.3.5"
   }
 }
