--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.0.4",
+    "@nomiclabs/hardhat-truffle5": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/chai-string": "^1.4.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^12.20.54",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "chai-string": "^1.5.0",
     "dotenv": "^16.0.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -35,12 +41,13 @@
     "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "solc": "^0.8.15",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.7.21",
     "ts-node": "^10.8.1",
-    "solc": "^0.8.15",
     "typechain": "^5.2.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "web3": "^1.7.4"
   },
   "dependencies": {
     "@ethersproject/abstract-signer": "^5.6.2",
@@ -49,17 +56,19 @@
     "@openzeppelin/contracts": "^4.2.0",
     "@typechain/hardhat": "^2.3.0",
     "@types/mocha": "^9.0.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-string": "^1.5.0",
     "eth-gas-reporter": "^0.2.24",
     "ethereumjs-util": "^7.1.0",
     "ethereumjs-wallet": "^1.0.1",
     "ethers": "^5.6.8",
     "ganache": "^7.1.0",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.5",
     "hardhat-deploy": "^0.9.3",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "hardhat-gas-reporter": "^1.0.7",
     "solc": "^0.8.15",
-    "solidity-coverage": "^0.7.18",
     "source-map-support": "^0.5.19",
     "typescript": "^4.3.5"
   }
