--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "ts-node": "^10.8.1",
     "typechain": "^5.2.0",
     "typescript": "^4.7.3",
-    "web3": "^1.7.4"
+    "web3": "^1.7.4",
+    "@ethersproject/abstract-signer": "^5.5.0",
+    "@ethersproject/properties": "^5.5.0"
   },
   "dependencies": {
-    "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/constants": "^5.6.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@openzeppelin/contracts": "^4.2.0",
@@ -61,7 +62,6 @@
     "eth-gas-reporter": "^0.2.24",
     "ethereumjs-util": "^7.1.0",
     "ethereumjs-wallet": "^1.0.1",
-    "ethers": "^5.6.8",
     "ganache": "^7.1.0",
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.5",
@@ -70,6 +70,9 @@
     "hardhat-gas-reporter": "^1.0.7",
     "solc": "^0.8.15",
     "source-map-support": "^0.5.19",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "@ethersproject/abstract-signer": "^5.5.0",
+    "@ethersproject/properties": "^5.5.0",
+    "ethers": "^5.5.2"
   }
 }
