npm ignore file updated

--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,19 @@
 hardhat.config.ts
 scripts
 test
+artifacts
+typechain
+cache
+coverage
+.env
+.env.*
+.secret
+.sol*
+.eslint*
+walletUtils.*
+converage.json
+arguments.js
+
+
+
+
