--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
   },
   "dependencies": {
     "@account-abstraction/contracts": "^0.2.0",
+    "@chainlink/contracts": "^0.4.1",
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/constants": "^5.6.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@openzeppelin/contracts": "^4.2.0",
+    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@typechain/hardhat": "^2.3.0",
     "@types/mocha": "^9.0.0",
     "chai-as-promised": "^7.1.1",
@@ -70,6 +72,7 @@
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "hardhat-gas-reporter": "^1.0.7",
     "solc": "^0.8.15",
+    "solidity-bytes-utils": "^0.8.0",
     "source-map-support": "^0.5.19",
     "typescript": "^4.3.5"
   }
