update package name and readme

--- a/.npmignore
+++ b/.npmignore
@@ -11,9 +11,10 @@ coverage
 .sol*
 .eslint*
 walletUtils.*
-converage.json
+coverage.json
 arguments.js
-
-
-
-
+src/utils/execution.ts
+src/utils/multisend.ts
+src/Create2Factory.ts
+typings/
+.*
