--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "web3": "^1.7.4"
   },
   "dependencies": {
+    "@0xsequence/create3": "https://github.com/0xsequence/create3",
     "@account-abstraction/contracts": "^0.2.0",
     "@chainlink/contracts": "^0.4.1",
     "@ethersproject/abstract-signer": "^5.6.2",
