--- a/package.json
+++ b/package.json
@@ -77,5 +77,16 @@
     "solidity-bytes-utils": "^0.8.0",
     "source-map-support": "^0.5.19",
     "typescript": "^4.3.5"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bcnmy/scw-contracts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bcnmy/scw-contracts/issues"
+  },
+  "homepage": "https://github.com/bcnmy/scw-contracts#readme"
 }
