--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/constants": "^5.6.1",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@openzeppelin/contracts-upgradeable": "^4.7.3",
+    "@openzeppelin/contracts": "4.8.1",
+    "@openzeppelin/contracts-upgradeable": "4.8.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/mocha": "^9.0.0",
     "chai-as-promised": "^7.1.1",
