--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "SCW contracts for Biconomy SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "npx hardhat clean",
+    "build": "npm run clean && npx hardhat compile",
+    "test": "npx hardhat test",
+    "lint": "prettier --write 'contracts/**/*.sol'",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "coverage": "DISABLE_VIA_IR=true hardhat coverage"
   },
   "keywords": [],
@@ -40,8 +46,10 @@
     "ethers": "^5.6.8",
     "hardhat": "^2.9.7",
     "hardhat-gas-reporter": "^1.0.8",
+    "husky": "^8.0.3",
+    "pinst": "^3.0.0",
     "prettier": "^2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "prettier-plugin-solidity": "^1.1.2",
     "solc": "^0.8.15",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.8.2",
@@ -78,5 +86,10 @@
     "solidity-bytes-utils": "^0.8.0",
     "source-map-support": "^0.5.19",
     "typescript": "^4.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": ""
+    }
   }
 }
