--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "husky install",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
-    "coverage": "DISABLE_VIA_IR=true hardhat coverage"
+    "coverage": "DISABLE_VIA_IR=true hardhat coverage",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
