--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 REPORT_GAS="true"
 FUNDING_ACCOUNT_PRIVATE_KEY=
 DEPLOYER_CONTRACT_DEPLOYER_PRIVATE_KEY=
-DEPLOYER_CONTRACT_ADDRESS_DEV=
-DEPLOYER_CONTRACT_ADDRESS_PROD=
 ENTRY_POINT_ADDRESS="0x0576a174D229E3cFA37253523E645A78A0C91B57"
+PAYMASTER_OWNER_ADDRESS_DEV="0x129443cA2a9Dec2020808a2868b38dDA457eaCC7"
+PAYMASTER_OWNER_ADDRESS_PROD=""
+PAYMASTER_SIGNER_ADDRESS_DEV="0x9FF0B97C9FAd35c74a22fb714b4fCA644d850C60"
+PAYMASTER_SIGNER_ADDRESS_PROD=""
+DEPLOYER_CONTRACT_ADDRESS_DEV="0xD3f89753278E419c8bda1eFe1366206B3D30C44f"
+DEPLOYER_CONTRACT_ADDRESS_PROD=""
 
 #mainnets
 ETH_MAINNET_URL=
