hardhad-deploy fixtures for tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "outDir": "dist",
     "declaration": true
   },
-  "include": ["./scripts", "./test", "./typechain"],
-  "files": ["./hardhat.config.ts"]
+  "include": ["./hardhat.config.ts", "./scripts", "./src/deploy", "./test"],
+  //"files": ["./hardhat.config.ts"]
 }
