--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-truffle5": "^2.0.6",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -44,8 +44,10 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.8",
+    "ethers": "^5.7.2",
     "hardhat": "^2.9.7",
+    "hardhat-dependency-compiler": "^1.1.3",
+    "hardhat-deploy": "^0.11.26",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^8.0.3",
     "pinst": "^3.0.0",
@@ -75,11 +77,9 @@
     "eth-gas-reporter": "^0.2.24",
     "ethereumjs-util": "^7.1.0",
     "ethereumjs-wallet": "^1.0.1",
-    "ethers": "^5.6.8",
     "ganache": "^7.1.0",
     "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.5",
-    "hardhat-deploy": "^0.9.3",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "hardhat-gas-reporter": "^1.0.7",
     "solc": "^0.8.15",
