--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.4",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
     "hardhat": "^2.9.7",
     "hardhat-dependency-compiler": "^1.1.3",
@@ -60,6 +60,11 @@
     "typechain": "^5.2.0",
     "typescript": "^4.7.3",
     "web3": "^1.7.4"
+  },
+  "overrides": {
+    "@nomiclabs/hardhat-waffle": {
+      "@nomiclabs/hardhat-ethers": "$@nomiclabs/hardhat-ethers"
+    }
   },
   "dependencies": {
     "@0xsequence/create3": "https://github.com/0xsequence/create3",
