--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hardhat-deploy": "^0.11.26",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^8.0.3",
+    "merkletreejs": "^0.3.10",
     "pinst": "^3.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.1.2",
