update hardhat config

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ ARBITRUM_TESTNET_URL=
 OPTIMISM_TESTNET_URL=
 BSC_TESTNET_URL=
 ZKEVM_TESTNET_URL=
+BASE_TESTNET_URL=
+LINEA_TESTNET_URL=
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
