--- a/test/bundler-integration/docker-compose.yml
+++ b/test/bundler-integration/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   bundler:
     ports: ["3000:3000"]
     image: accountabstraction/bundler
-    command: --network http://geth-dev:8545
+    command: --network http://geth-dev:8545 --entryPoint 0x881f3ed00AA4F4C98e76644Bb46DebC24DffE307
     volumes:
       - ./workdir:/app/workdir:ro
 
-    mem_limit: 300M
+    mem_limit: 1000M
     logging:
       driver: "json-file"
       options:
