--- a/test/bundler-integration/environment/docker-compose.yml
+++ b/test/bundler-integration/environment/docker-compose.yml
@@ -3,8 +3,8 @@ version: "2"
 services:
   bundler:
     ports: ["3000:3000"]
-    image: accountabstraction/bundler
-    command: --network http://geth-dev:8545 --entryPoint 0x1E1EDc60c3C65E45C18D30a5D6E614c2e12d08E1
+    image: accountabstraction/bundler:0.6.1
+    command: --network http://geth-dev:8545 --entryPoint 0x1E1EDc60c3C65E45C18D30a5D6E614c2e12d08E1 --show-stack-traces
     volumes:
       - ./workdir:/app/workdir:ro
 
