refactor: lint ts files

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "npm run clean && npx hardhat compile",
     "test": "npx hardhat test",
     "bundler-test": "./scripts/bundler-tests.sh",
-    "lint": "prettier --write 'contracts/**/*.sol'",
-    "lint-fix": "eslint -c .eslintrc.js 'test/**/*.ts' --fix",
+    "lint-sol": "prettier --write 'contracts/**/*.sol'",
+    "lint-ts": "eslint -c .eslintrc.js 'test/**/*.ts' --fix",
     "postinstall": "husky install",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
