required publish actions

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,10 @@
 hardhat.config.ts
 scripts
-test
-artifacts
-cache
+test/
+artifacts/
+cache/
+out/
+types/
 coverage
 .env
 .env.*
@@ -16,6 +18,8 @@ src/utils/execution.ts
 src/utils/multisend.ts
 src/Create2Factory.ts
 typings/
+typechain
+typechain-types
 .husky/pre-commit
 .prettierignore
 .prettierrc
