add configuration for mantle, combo and opbnb

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ ARBITRUM_MAINNET_URL=
 OPTIMISM_MAINNET_URL=
 BSC_MAINNET_URL=
 ZKEVM_MAINNET_URL=
+OP_BNB_MAINNET_URL=https://opbnb-mainnet-rpc.bnbchain.org
+MANTLE_MAINNET_URL=https://rpc.mantle.xyz
 
 #testnets
 GOERLI_URL=
@@ -29,6 +31,9 @@ ARBITRUM_TESTNET_URL=
 OPTIMISM_TESTNET_URL=
 BSC_TESTNET_URL=
 ZKEVM_TESTNET_URL=
+OP_BNB_TESTNET_URL=https://opbnb-testnet-rpc.bnbchain.org/
+MANTLE_TESTNET_URL=https://rpc.testnet.mantle.xyz	
+COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
@@ -39,3 +44,6 @@ AVALANCHE_API_KEY=
 ARBITRUM_API_KEY=
 BASE_API_KEY=
 ZKEVM_API_KEY=
+# Generate on https://dashboard.nodereal.io/
+OP_BNB_API_KEY=
+COMBO_API_KEY=
