Add configuration for Moonbeam

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ ARBITRUM_MAINNET_URL=
 OPTIMISM_MAINNET_URL=
 BSC_MAINNET_URL=
 ZKEVM_MAINNET_URL=
+LINEA_MAINNET_URL=https://rpc.linea.build
 OP_BNB_MAINNET_URL=https://opbnb-mainnet-rpc.bnbchain.org
 MANTLE_MAINNET_URL=https://rpc.mantle.xyz
 
@@ -44,6 +45,7 @@ AVALANCHE_API_KEY=
 ARBITRUM_API_KEY=
 BASE_API_KEY=
 ZKEVM_API_KEY=
+MOONBEAM_KEY=
 # Generate on https://dashboard.nodereal.io/
 OP_BNB_API_KEY=
 COMBO_API_KEY=
