Read deployment mode from .env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 REPORT_GAS="true"
+# DEV / PROD
+DEPLOYMENT_MODE=PROD
+
 PRIVATE_KEY=
 FUNDING_ACCOUNT_PRIVATE_KEY=
 DEPLOYER_CONTRACT_DEPLOYER_PRIVATE_KEY=
