--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,10 @@ BSCSCAN_API_KEY=
 OPTIMISTIC_API_KEY=
 AVALANCHE_API_KEY=
 ARBITRUM_API_KEY=
-BASE_API_KEY=
+ARBITRUM_NOVA_API_KEY=
+BASE_GOERLI_API_KEY=
+BASE_MAINNET_API_KEY=
+LINEA_API_KEY=
 ZKEVM_API_KEY=
 MOONBEAM_KEY=
 # Generate on https://dashboard.nodereal.io/
