--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Create a fake .secret file
-        run: echo "pistol kiwi squirrel general approve avoid doll employ abandon banana" > .secret
+        run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
       - name: Install dependencies
         run: yarn install --frozen-lockfile && yarn build
       - name: Lint sources
@@ -40,7 +40,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Create a fake .secret file
-        run: echo "pistol kiwi squirrel general approve avoid doll employ abandon banana" > .secret
+        run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
       - name: Install dependencies
         run: yarn install --frozen-lockfile && yarn build
       - name: Run tests
