--- a/foundry.toml
+++ b/foundry.toml
@@ -1,10 +1,7 @@
 [profile.default]
 src = "contracts"
 out = "out"
-libs = [
-    "lib",
-    "node_modules",
-]
+libs = ["node_modules", "lib"]
 test = "test/foundry"
 cache_path = "forge-cache"
 remappings = [
