--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -38,10 +38,28 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
+      
       - name: Create a fake .secret file
         run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile && yarn build
-      - name: Run tests
+
+      - name: Run Hardhat Tests
         run: yarn test
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
+      - name: Run Forge build
+        run: |
+          forge --version
+          forge build --sizes
+        id: forge-build
+
+      - name: Run Forge tests
+        run: |
+          forge test -vvv 
+        id: forge-test
