--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,20 @@ node_modules
 .idea
 coverage
 coverage.json
-typechain
+types/
+dist/
 
 #Hardhat files
 cache
 artifacts
+artifacts-filtered
+typechain
+typechain-types
+
 
 #ignore .DS_Store recursively
 .DS_Store
 
 deployments/localhost
+
+typings
