--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: 'actions/checkout@master'
+        uses: "actions/checkout@master"
       - name: Set Node.js
         uses: actions/setup-node@v1
         with:
@@ -20,8 +20,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile && yarn build
       - name: Lint sources
-        run:
-          yarn run lint 
+        run: yarn run lint
 
   unit_test:
     name: Unit tests
@@ -32,26 +31,23 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: 'actions/checkout@master'
+        uses: "actions/checkout@master"
 
       - name: Set Node.js
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      
+
       - name: Create a fake .secret file
         run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
-
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile && yarn build
-
-      - name: Run Hardhat Tests
-        run: yarn test
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile && yarn build
 
       - name: Run Forge build
         run: |
@@ -59,7 +55,10 @@ jobs:
           forge build --sizes
         id: forge-build
 
+      - name: Run Hardhat Tests
+        run: yarn test
+
       - name: Run Forge tests
         run: |
-          forge test -vvv 
+          forge test -vvv
         id: forge-test
