--- a/foundry.toml
+++ b/foundry.toml
@@ -5,9 +5,9 @@ libs = ["node_modules", "lib"]
 test = "test/foundry"
 cache_path = "forge-cache"
 remappings = [
+    "@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/",
     "@account-abstraction/=node_modules/@account-abstraction/",
     "@ethereum-waffle/=node_modules/@ethereum-waffle/",
-    "@openzeppelin/=node_modules/@openzeppelin/",
     "eth-gas-reporter/=node_modules/eth-gas-reporter/",
     "hardhat-deploy/=node_modules/hardhat-deploy/",
     "hardhat/=node_modules/hardhat/",
