--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,5 @@ MOONBEAM_KEY=
 # Generate on https://dashboard.nodereal.io/
 OP_BNB_API_KEY=
 COMBO_API_KEY=
+ASTAR_SHIBUYA_API_KEY=
+ASTAR_MAINNET_API_KEY=
