--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ ZKEVM_TESTNET_URL=
 OP_BNB_TESTNET_URL=https://opbnb-testnet-rpc.bnbchain.org/
 MANTLE_TESTNET_URL=https://rpc.testnet.mantle.xyz	
 COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
+CAPX_TESTNET_URL=https://rpc.capx.fi
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
