--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Create a fake .secret file inside submodule
         run: cd biconomy-paymasters && echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
       - name: Install submodules dependencies
-        run: yarn install --frozen-lockfile && yarn build && cd ..
+        run: cd biconomy-paymasters && yarn install --frozen-lockfile && npx hardhat compile && cd ..
       - name: build after submodule is built
         run: yarn build
       - name: Lint sources
