revert workflow changes and remove frozen lockfile

--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create a fake .secret file
         run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
       - name: Install dependencies
-        run: yarn install --frozen-lockfile && yarn build
+        run: yarn install && yarn build
       - name: Lint sources
         run:
           yarn run lint 
