--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -51,7 +51,19 @@ jobs:
         run: echo "primary twist rack vendor diagram image used route theme frown either will" > .secret
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile && yarn build
+        run: yarn install --frozen-lockfile
+
+      - name: Update submodule
+        run: git submodule update --init && git submodule sync
+
+      - name: Create a fake .secret file inside submodule
+        run: cd biconomy-paymasters && echo "primary twist rack vendor diagram image used route theme frown either will" > .secret && cd ..
+
+      - name: Install submodules dependencies
+        run: cd biconomy-paymasters && yarn install --frozen-lockfile && npx hardhat compile && cd ..
+        
+      - name: build after submodule is built
+        run: yarn build
 
       - name: Run Hardhat Tests
         run: yarn test
