--- a/.github/workflows/push_check.yml
+++ b/.github/workflows/push_check.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Update submodule
-        run: git submodule update --init && git submodule sync
+        run: git submodule update --init --recursive && git submodule sync
       - name: Create a fake .secret file inside submodule
         run: cd biconomy-paymasters && echo "primary twist rack vendor diagram image used route theme frown either will" > .secret && cd ..
       - name: Install submodules dependencies
