--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ ZKEVM_MAINNET_URL=
 LINEA_MAINNET_URL=https://rpc.linea.build
 OP_BNB_MAINNET_URL=https://opbnb-mainnet-rpc.bnbchain.org
 MANTLE_MAINNET_URL=https://rpc.mantle.xyz
+CHILLIZ_MAINNET_URL=https://rpc.ankr.com/chiliz
 
 #testnets
 GOERLI_URL=
@@ -35,6 +36,7 @@ OP_BNB_TESTNET_URL=https://opbnb-testnet-rpc.bnbchain.org/
 MANTLE_TESTNET_URL=https://rpc.testnet.mantle.xyz	
 COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
 CAPX_TESTNET_URL=https://rpc.capx.fi
+CHILLIZ_TESTNET_URL=https://spicy-rpc.chiliz.com/
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
