--- a/foundry.toml
+++ b/foundry.toml
@@ -12,6 +12,6 @@ remappings = [
     "hardhat-deploy/=node_modules/hardhat-deploy/",
     "hardhat/=node_modules/hardhat/",
 ]
-via_ir = true
+via_ir = false
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
