--- a/foundry.toml
+++ b/foundry.toml
@@ -17,3 +17,6 @@ solc_version = "0.8.21"
 evm_version = "paris"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[profile.coverage]
+src = 'test/foundry'
