--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DEPLOYER_CONTRACT_ADDRESS_PROD=""
 SMART_ACCOUNT_FACTORY_OWNER_ADDRESS_DEV=""
 SMART_ACCOUNT_FACTORY_OWNER_ADDRESS_PROD=""
 
+SMART_ACCOUNT_FACTORY_ADDRESS_V1_PROD=""
+SMART_ACCOUNT_FACTORY_ADDRESS_V2_PROD=""
+ECDSA_REGISTRY_MODULE_ADDRESS_PROD=""
+
 #mainnets
 ETH_MAINNET_URL=
 POLYGON_URL=
