--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@ethersproject/constants": "^5.6.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
-    "ethereumjs-util": "^7.1.0"
+    "ethereumjs-util": "^7.1.0",
+    "hardhat-tracer": "^2.7.0"
   }
 }
