chore: coredao chain configuration

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ LINEA_MAINNET_URL=https://rpc.linea.build
 OP_BNB_MAINNET_URL=https://opbnb-mainnet-rpc.bnbchain.org
 MANTLE_MAINNET_URL=https://rpc.mantle.xyz
 CHILLIZ_MAINNET_URL=https://rpc.ankr.com/chiliz
+COREDAO_MAINNET_URL=https://rpc.coredao.org
 
 #testnets
 GOERLI_URL=
@@ -37,6 +38,7 @@ MANTLE_TESTNET_URL=https://rpc.testnet.mantle.xyz
 COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
 CAPX_TESTNET_URL=https://rpc.capx.fi
 CHILLIZ_TESTNET_URL=https://spicy-rpc.chiliz.com/
+COREDAO_TESTNET_URL=https://rpc.test.btcs.network
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
