--- a/package.json
+++ b/package.json
@@ -82,8 +82,11 @@
     "@account-abstraction/contracts": "^0.6.0",
     "@ethersproject/abstract-signer": "^5.6.2",
     "@ethersproject/constants": "^5.6.1",
+    "@types/elliptic": "^6.4.18",
     "axios": "^1.4.0",
+    "bn.js": "^5.2.1",
     "dotenv": "^16.0.3",
+    "elliptic": "^6.5.4",
     "ethereumjs-util": "^7.1.0"
   }
 }
