feat: arbitrum sepolia config

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
 CAPX_TESTNET_URL=https://rpc.capx.fi
 CHILLIZ_TESTNET_URL=https://spicy-rpc.chiliz.com/
 COREDAO_TESTNET_URL=https://rpc.test.btcs.network
+ARBITRUM_SEPOLIA_TESTNET_URL=https://sepolia-rollup.arbitrum.io/rpc
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
