--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "@types/chai": "^4.3.4",
+    "@types/elliptic": "^6.4.18",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "bn.js": "^5.2.1",
     "chai": "^4.3.7",
     "dotenv": "^16.0.1",
+    "elliptic": "^6.5.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
