--- a/foundry.toml
+++ b/foundry.toml
@@ -15,6 +15,7 @@ remappings = [
 via_ir = true
 evm_version = "paris"
 auto_detect_solc = true
+# auto_detect_remappings = false
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
