--- a/.env.example
+++ b/.env.example
@@ -36,10 +36,13 @@ ZKEVM_TESTNET_URL=
 OP_BNB_TESTNET_URL=https://opbnb-testnet-rpc.bnbchain.org/
 MANTLE_TESTNET_URL=https://rpc.testnet.mantle.xyz	
 COMBO_TESTNET_URL=https://test-rpc.combonetwork.io
-CAPX_TESTNET_URL=https://rpc.capx.fi
 CHILLIZ_TESTNET_URL=https://spicy-rpc.chiliz.com/
 COREDAO_TESTNET_URL=https://rpc.test.btcs.network
 ARBITRUM_SEPOLIA_TESTNET_URL=https://sepolia-rollup.arbitrum.io/rpc
+BLAST_TESTNET_URL=
+SCROLL_TESTNET_URL=
+CAPX_TESTNET_URL=
+ZETA_TESTNET_URL=
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
