config for new chains

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ OP_BNB_MAINNET_URL=https://opbnb-mainnet-rpc.bnbchain.org
 MANTLE_MAINNET_URL=https://rpc.mantle.xyz
 CHILLIZ_MAINNET_URL=https://rpc.ankr.com/chiliz
 COREDAO_MAINNET_URL=https://rpc.coredao.org
+SCROLL_MAINNET_URL=https://rpc.scroll.network
 
 #testnets
 GOERLI_URL=
@@ -43,6 +44,8 @@ BLAST_TESTNET_URL=
 SCROLL_TESTNET_URL=
 CAPX_TESTNET_URL=
 ZETA_TESTNET_URL=
+BASE_SEPOLIA_URL=
+BERA_TESTNET_URL=
 
 #blockexplorers apikeys
 ETHERSCAN_API_KEY=
@@ -61,3 +64,5 @@ ASTAR_SHIBUYA_API_KEY=
 ASTAR_MAINNET_API_KEY=
 SCROLL_API_KEY=
 BLAST_API_KEY=
+BASE_SEPOLIA_API_KEY=
+ZETA_API_KEY=
