zetachain mainnet config

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ BLAST_TESTNET_URL=
 SCROLL_TESTNET_URL=
 CAPX_TESTNET_URL=
 ZETA_TESTNET_URL=
+ZETA_MAINNET_URL=
 BASE_SEPOLIA_URL=
 BERA_TESTNET_URL=
 
