Amoy + blast mainnet partial config

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ MANTLE_MAINNET_URL=https://rpc.mantle.xyz
 CHILLIZ_MAINNET_URL=https://rpc.ankr.com/chiliz
 COREDAO_MAINNET_URL=https://rpc.coredao.org
 SCROLL_MAINNET_URL=https://rpc.scroll.network
+BLAST_MAINNET_URL=
 
 #testnets
 GOERLI_URL=
